Launch React app at root routes
